🐛 [Trailer] fix importing trailer urls from NFO/removed HTTP(s) checks too
#2962